[package]
name = "tikv-server"
version = "0.0.1"
license = "Apache-2.0"
edition = "2018"
publish = false

[features]
default = ["test-engines-rocksdb", "cloud-aws", "cloud-gcp"]
tcmalloc = ["server/tcmalloc"]
jemalloc = ["server/jemalloc"]
mimalloc = ["server/mimalloc"]
portable = ["server/portable"]
sse = ["server/sse"]
mem-profiling = ["server/mem-profiling"]
failpoints = ["server/failpoints"]
bcc-iosnoop = ["server/bcc-iosnoop"]
cloud-aws = ["server/cloud-aws"]
cloud-gcp = ["server/cloud-gcp"]
test-engines-rocksdb = ["server/test-engines-rocksdb"]
test-engines-panic = ["server/test-engines-panic"]

nortcheck = ["server/nortcheck"]

[dependencies]
aaa = { git = "https://github.com/yaozongyou/aaa.git", rev = "2f4818c6aad675288358a5e32f609a78bd02f960" }
clap = "2.32"
server = { path = "../../components/server", default-features = false }
tikv = { path = "../../", default-features = false }
toml = "0.5"

[build-dependencies]
time = "0.1"
