[package]
name = "txn_types"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
aaa = { git = "https://github.com/yaozongyou/aaa.git", rev = "2f4818c6aad675288358a5e32f609a78bd02f960" }
byteorder = "1.2"
bitflags = "1.0.1"
farmhash = "1.1.5"
error_code = { path = "../error_code", default-features = false }
codec = { path = "../codec", default-features = false }
kvproto = { git = "https://github.com/pingcap/kvproto.git" }
slog = "2.3"
thiserror = "1.0"
tikv_alloc = { path = "../tikv_alloc" }
tikv_util = { path = "../tikv_util", default-features = false }
collections = { path = "../collections" }
log_wrappers = { path = "../log_wrappers" }

[dev-dependencies]
rand = "0.8"
panic_hook = { path = "../panic_hook" }
